--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     ],
     "description": "The official Monri Payments Magento 2 module",
     "version": "1.0.0",
+    "license": [
+        "OSL-3.0"
+    ],
     "require": {
         "magento/framework": "^101.0||^102.0",
         "magento/module-payment": "^100.2.0",
