--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "monri/payments",
+    "name": "monripayments/magento2",
     "authors": [
         {
             "name": "Favicode eCommerce Agency",
