--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         "OSL-3.0"
     ],
     "require": {
-        "magento/framework": "^101.0||^102.0",
-        "magento/module-payment": "^100.2.0",
-        "magento/module-sales": "^101.0||^102.0",
+        "magento/framework": "^101.0||^102.0||^103.0",
+        "magento/module-payment": "^100.2",
+        "magento/module-sales": "^101.0||^102.0||^103.0",
         "magento/module-config": "^101.0",
-        "magento/module-backend": "^100.2||^101.0",
+        "magento/module-backend": "^100.2||^101.0||^102.0",
         "magento/module-checkout": "^100.2",
         "magento/module-store": "^100.2||^101.0",
         "magento/module-quote": "^101.0"
