--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "magento/module-backend": "^100.2||^101.0||^102.0",
         "magento/module-checkout": "^100.2",
         "magento/module-store": "^100.2||^101.0",
-        "magento/module-quote": "^101.0"
+        "magento/module-quote": "^101.0",
+        "php": "^8.1"
     },
     "type": "magento2-module",
     "autoload": {
